# rivers

./: Cargo.toml  LICENSE  README.md
examples/: test.rs
src/: adapters.rs  bytes.rs  channel.rs  event.rs  handler.rs  lib.rs  serde.rs  stream.rs  transport.rs
src/channel/: filter.rs  map.rs  to.rs
src/stream/: filter.rs  map.rs  next.rs
