[package]
name = "rivers"
version = "0.0.1"
authors = ["Tyler Horton <tylerhortonc@gmail.com>"]
edition = "2018"
homepage = "https://github.com/tylerhorton/rivers"
repository = "https://github.com/tylerhorton/rivers"
description = "A Rust streams processing library."
license = "MIT"

[dependencies]
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.0"
pin-project = "1"
async-trait = "0.1.52"
frunk = "0.4.0"
